--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="undo">Desfazer</string>
     <string name="action_share">Compartilhar</string>
     <string name="share_text">Me hospedei no %1$s e o classifiquei em %2$.1f estrelas</string>
+    <string name="action_edit">Editar</string>
 
 </resources>
